"plantuml.exportOutDir": "."
@startuml 
title Zeldiablo

interface Jeu {
    +evoluer(Commande): void
    +etreFini(): boolean
}

class JeuPrincipal {
    +lever: int
    +JeuPrincipal()
}

class JeuPerso {
    +JeuPerso(Aventurier)
    +evoluer(Commande): void
    +etreFini(): boolean
}

interface DessinJeu {
    +dessine(BuffuredImage) : void
}

class DessinPerso {
    +DessinPerso(JeuPerso, Labyrinthe)
    +dessine(BuffuredImage): void
}

class Labyrinthe {
    -TAILLE_MIN: int
    -TAILLE_MAX: int
    +Labyrinthe()
    +Labyrinthe(String)
}

class MonstreImmobile {
    -degat: int

    +MonstreImmobile(int, int, int, String, int)
    +attaquer(JeuPerso): void
}

abstract Case {
    #posX: int
    #posY: int
}

class CaseVide {
    +CaseVide(int, int)
}

class Mur {
    +Mur(int, int)
}

abstract Entite {
    #pv: int
    #x: int
    #y: int
    #nom: String
    #lab: Labyrinthe
    #vivant: boolean

    +Entite(int, int, int, String, Layrinthe)
    +seDeplacer(char): void
    +subirDegat(int): void
    +mort(): void
}

class Aventurier {
    +Aventurier(int, int int, String)
}

DessinPerso "1" --> "1" Labyrinthe : -lab
JeuPrincipal "1" --> "1" Labyrinthe : -lab
JeuPrincipal "1" --> "1" Aventurier : -av
JeuPerso "1" --> "1" Aventurier : -personnage
DessinPerso "1" --> "1" JeuPerso : -jeuEnCours
Labyrinthe "1" --> "0..*" Case : -cases

JeuPerso ..|> Jeu
DessinPerso ..|> DessinJeu
CaseVide --|> Case
Mur --|> Case
Aventurier --|> Entite
MonstreImmobile --|> Entite

@enduml